# ForthScriptCpp

./: .gitignore  .gitmodules  CMakeLists.txt  ForthScriptCpp.h  ForthScriptCppFile.h  ForthScriptCppMemory.h  README.md  words_status.txt
examples/EmbededScript/: CMakeLists.txt  EmbededScript.cpp  make.sh
examples/ForthDebug/: forthdebug.frt
examples/ForthRobots/: CMakeLists.txt  ForthRobotSamples.h  ForthRobots.cpp  ForthRobots.sln  ForthRobots.vcxproj  crobots.h  display.cpp  intrins.cpp  make.sh  motion.cpp  screena.cpp
examples/ForthRobots/Robots/: counter.fth  rabbit.fth  rook.fth  sniper.fth  target.fth
examples/ForthRobots/docs/: ForthRobots_manual.html  counter.fth.html  crobots_manual.html  rabbit.fth.html  rook.fth.html  sniper.fth.html
examples/SimpleForth/: CMakeLists.txt  SimpleForth  SimpleForth.cpp  SimpleForth.sln  SimpleForth.vcxproj  createexample  make.sh
examples/SimpleForth/scripts/: chess.f
tests/examples/ForthRobots/: CMakeLists.txt  test-ForthRobots.cc
tests/suit1/: core.fr  runtestsall.fth  toolstest.fth  ttester.fs  utilities.fth
tests/suit1/fp/: ak-fp-test.fth  fpio-test.4th  paranoia.4th
tests/unittests/: CMakeLists.txt  blocks.fb  constructor.cc  forthtestlib.cc  forthtestlib.h  include.fth  include_all.fth  include_fp.fth  test_exceptions.cc  test_strings.cc  test_word_to.cc  test_wordlist.cc  test_xchar.cc  testresult.txt  testsuit1.cc  testsuite2.cc  words-check.frt
